<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.ItemActivity">

    <TextView
        android:id="@+id/NameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:text="@string/item_name"
        android:textColor="?colorPrimary"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/FoodImage"
        android:layout_width="250dp"
        android:layout_height="170dp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NameTextView"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:text="@string/description"
        android:textColor="?colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FoodImage" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/BuyNowButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">


        <RadioButton
            android:id="@+id/ButtonOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_1"
            android:textColor="?colorSecondary"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/ButtonTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_2"
            android:textColor="?colorSecondary"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/ButtonThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_3"
            android:textColor="?colorSecondary"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/ButtonFour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_4"
            android:textColor="?colorSecondary"
            android:textSize="20sp" />
    </RadioGroup>

    <Button
        android:id="@+id/BuyNowButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="161dp"
        android:layout_marginLeft="161dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="161dp"
        android:layout_marginRight="161dp"
        android:text="@string/buy_now"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/AddToCartButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="70dp"
        android:text="@string/add_to_cart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BuyNowButton"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>